@@ -56,6 +56,8 @@
 		<script type="text/javascript" src="js/buildings/im/rearming_deck.js"></script>
 		<script type="text/javascript" src="js/buildings/im/rift_creator.js"></script>
 		<script type="text/javascript" src="js/buildings/im/center_bridge.js"></script>
+		<script type="text/javascript" src="js/buildings/fg/headquarter.js"></script>
+		<script type="text/javascript" src="js/buildings/fg/laser_turret.js"></script>
 		<script type="text/javascript" src="js/buildings/civilian/taelon_mine.js"></script>
 		<script type="text/javascript" src="js/buildings/civilian/water_well.js"></script>
 		<script type="text/javascript" src="js/buildings/civilian/vertical_bridge.js"></script>
