@@ -1,5 +1,5 @@
-var DRAW_LAYER_SHADOWS = 0;
-var DRAW_LAYER_GBUILD = 1;
+var DRAW_LAYER_GBUILD = 0;
+var DRAW_LAYER_SHADOWS = 1;
 var DRAW_LAYER_GUNIT = 2;
 var DRAW_LAYER_TBUILD = 3;
 var DRAW_LAYER_ABUILD = 4;
