@@ -7,6 +7,7 @@ To do:
 - High priority bugs:
 	- when ordering scouted unit it don't stop scout
 	- when disabling order, unit should stop
+	- disable ability to harvest for other player buildings
 
 - Medium priority bugs:
 	- Add Boost weapon (weapon for Amper unit)
